@@ -5,6 +5,8 @@ PickerTweaks=Picker Tweaks
 PickerTweaks=Small Data Tweaks for Factorio.
 
 [mod-setting-name]
+picker-noalt-construction-robots=Hide Construction Bot Alt Info
+picker-noalt-logistic-robots=Hide Logistic Bot Alt Info
 picker-unminable-construction-robots=Unminable Construction Robots
 picker-unminable-logistic-robots=Unminable Logistic Robots
 picker-requester-paste-multiplier=Default Requester Paste Multiplier
@@ -51,6 +53,8 @@ picker-wire-color-green=Green Circuit Wire
 picker-wire-color-red=Red Circtuit Wire
 
 [mod-setting-description]
+picker-noalt-construction-robots=Hide alt info on construction robots.\nFactorio default: false
+picker-noalt-logistic-robots=Hide alt info on logistic robots.\nFactorio default: false
 picker-unminable-construction-robots=Make it impossible to pluck construction robots out of the air.\nFactorio default: false
 picker-unminable-logistic-robots=Make it impossible to pluck logistic robots out of the air.\nFactorio default: false
 picker-requester-paste-multiplier=Changes the default requester paste multipler on all recipes set to Factorio default.\nFactorio default: 2
