@@ -9,8 +9,9 @@ local bots = {}
 
 --Make them un-minable and fire proof and show on map
 for index, bot in pairs(types) do
-    for _, entity in pairs(data.raw[bot]) do
+    for _, entity in Data:pairs(data.raw[bot]) do
         bots[entity.name] = true
+        local flags = entity:Flags()
         if bot == 'construction-robot' then
             if settings.startup['picker-unminable-construction-robots'].value then
                 entity.minable = nil
@@ -19,25 +20,33 @@ for index, bot in pairs(types) do
                 entity.resistances = entity.resistances or {}
                 table.insert(entity.resistances, {type = 'fire', percent = 100})
             end
+            if settings.startup['picker-noalt-construction-robots'].value then
+                flags:add('hide-alt-info')
+            end
         end
-        if bot == 'logistic-robot' and settings.startup['picker-unminable-logistic-robots'].value then
-            entity.minable = nil
+        if bot == 'logistic-robot'then
+            if settings.startup['picker-unminable-logistic-robots'].value then
+                entity.minable = nil
+            end
+            if settings.startup['picker-noalt-logistic-robots'].value then
+                flags:add('hide-alt-info')
+            end
         end
         if settings.startup['picker-show-bots-on-map'].value then
             -- "name": "ShowBotsOnMap",
             -- "description": "Now you can see your robots on the map",
             -- "title": "Show Bots On Map",
             -- "author": "darkfrei",
-            entity = Data(entity)
-            entity:Flags():remove('not-on-map')
+            --entity = Data(entity)
+            flags:remove('not-on-map')
             entity.map_color = {r = index - 1, g = index - 1, b = index - 1}
         end
     end
 end
 
 --Remove goes-to-quickbar
-for _, item in pairs(data.raw['item']) do
+for _, item in Data:pairs(data.raw['item']) do
     if item.place_result and bots[item.place_result] then
-        Data(item):Flags():remove('goes-to-quickbar')
+        item:Flags():remove('goes-to-quickbar')
     end
 end
