@@ -2,6 +2,7 @@
 Version: 2.0.0
 Date: ??????
   Features:
+    - Add Show alt info options for logistic and construction robots.
     - Add Tree removal on resources.
     - Add Realistic Reactor Glow.
     - Add Smaller Request Proxy image.
